   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2014-03-12 19:05 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r282)
  * hbqtwidgets/hbqtbrowse.prg
    + Implemented: Left toolbar which contain navigational icons 
        which were contained in top toolbar originally. By default 
        it is off. To switch it on, issue this message.
           oBrowse:toolbarLeft := .t.
    ; This is necessary as we never need navigational icon visible
        all the times. It also shortens top toolbar's width which will 
        facilitate to host more actions scheduled for next few days.

  * hbqtwidgets/tests/browdb.prg
    % Updated to show above change.
        
2014-03-12 15:02 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r281)
  * hbqtwidgets/hbqtbrowse.prg
    ! Fixed: synchronization of frozen columns with browser columns from 
       visual point of view. Concept discoved by Dusan Majkic but implemented 
       differently.

    % Added: vertical movement management synchronizing well between frozen 
       and regular rows. Also cursor at current row is visible on frozen 
       columns also. Concept forwarded by Dusan but implemented differently.

    % Added: clicking on any row on frozen columns positions the cursor 
       of regular columns to same row.

2014-03-12 12:46 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r280)
  * hbqt/hbmk2_qt.hb
    + Applied patch from Francek, not tested but must work.
       It sets the tab order of controls in a dialog.
  
  * hbqt/qtcore/qth/QLocate.qth
    ! Fixed to not produce incorrect code for :toCurrencyString() method.

2014-01-20 08:36 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r279)
  * hbqt/hbmk2_qt.hb