@@ -16,6 +16,10 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2014-03-26 16:41 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r283)
+  * hbqt/qtnetwork/hbqt_init.cpp
+    ! Fixed: to be usable with Qt5x.
+
 2014-03-12 19:05 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r282)
   * hbqtwidgets/hbqtbrowse.prg
     + Implemented: Left toolbar which contain navigational icons 
